remove build from git

--- a/src/team-members/editor.scss
+++ b/src/team-members/editor.scss
@@ -1,3 +1,7 @@
+.wp-block-create-block-team-member-remove-image-button {
+	padding-top: 24px;
+}
+
 .wp-block-create-block-team-members {
 	display: block;
 
