--- a/src/team-members/editor.scss
+++ b/src/team-members/editor.scss
@@ -75,6 +75,38 @@
 				margin-bottom: 5px;
 				margin-top: 5px;
 			}
+			.wp-block-create-block-team-member-social-links {
+				ul {
+					list-style: none;
+					padding: 0;
+					margin: 15px -5px 0;
+
+					li {
+						display: inline-block;
+						margin: 5px;
+
+						span.dashicon {
+							color: #4e4e4e;
+						}
+
+						button {
+							background: none;
+							border: none;
+							padding: 0;
+							cursor: pointer;
+							margin: 0;
+							height: 25px;
+							min-width: 24px;
+							width: 25px;
+						}
+						&.wp-block-create-block-team-member-add-icon-li {
+							button {
+								outline: 1px dashed;
+							}
+						}
+					}
+				}
+			}
 		}
 	}
 }
